--- a/app/Resources/views/memberdate/index.html.twig
+++ b/app/Resources/views/memberdate/index.html.twig
@@ -29,13 +29,13 @@
                 <td>
                     <ul>
                         <li>
-
-                        <input type="button" class="button" href="{{ path('lidBewerken_show', { 'id': memberDate.id }) }}" value="show" />
+                        <a class="button" href="{{ path('lidBewerken_show', { 'id': memberDate.id }) }}" >show</a>
+                       
                      
               
                         </li>
                         <li>
-                            <a href="{{ path('lidBewerken_edit', { 'id': memberDate.id }) }}">edit</a>
+                            <a class="button" href="{{ path('lidBewerken_edit', { 'id': memberDate.id }) }}">edit</a>
                         </li>
                     </ul>
                 </td>
