--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -19,6 +19,17 @@
     <body>
          <img src="{{ asset('images/header.jpg') }}" />
         
+<nav>
+    <table>
+        <tr>
+            <td class="nav"><a href="#">Home</a></td>        
+            <td class="nav"><a href="#">Inloggen</a></td>
+            <td class="nav"><a href="#">Link</a></td>
+            <td class="nav"><a href="#">Link</a></td>
+        </tr>
+    </table>
+</nav>
+
         {% block body %}
 
        
