--- a/app/Resources/views/memberdate/edit.html.twig
+++ b/app/Resources/views/memberdate/edit.html.twig
@@ -3,19 +3,16 @@
 {% block body %}
     <h3>Lid bewerken</h3>
 
-    {{ form_start(edit_form) }}
-        {{ form_widget(edit_form) }}
-        <input class="button" type="submit" value="Bewerken" />
-    {{ form_end(edit_form) }}
+          <a href="{{ path('lidBewerken_index') }}">Terug naar de lijst</a>
 
-    <ul>
-        <li>
-           <a href="{{ path('lidBewerken_index') }}">Terug naar de lijst</a>
-        </li>
-        <li>
+    <div class="container-form">
+            {{ form_start(edit_form) }}
+                {{ form_widget(edit_form) }}
+                <input class="button" type="submit" value="Bewerken" />
+            {{ form_end(edit_form) }}
+      
             {{ form_start(delete_form) }}
-                <input type="submit" value="Verwijderen">
+                <input class="button" type="submit" value="Verwijderen">
             {{ form_end(delete_form) }}
-        </li>
-    </ul>
+    </div>
 {% endblock %}
