--- a/app/Resources/views/memberdate/new.html.twig
+++ b/app/Resources/views/memberdate/new.html.twig
@@ -2,15 +2,15 @@
 
 {% block body %}
     <h3>Lid invoeren</h3>
-
-    {{ form_start(form) }}
-        {{ form_widget(form) }}
-        <input type="submit" value="Aanmaken" />
-    {{ form_end(form) }}
-
-    <ul>
+ <ul>
         <li>
             <a href="{{ path('lidBewerken_index') }}">Terug naar overzicht</a>
         </li>
     </ul>
+    {{ form_start(form) }}
+        {{ form_widget(form) }}
+        <input class="button" type="submit" value="Aanmaken" />
+    {{ form_end(form) }}
+
+   
 {% endblock %}
