--- a/app/Resources/views/memberdate/edit.html.twig
+++ b/app/Resources/views/memberdate/edit.html.twig
@@ -11,7 +11,7 @@
                 {{ form_widget(edit_form) }}
                 <input class="button" type="submit" value="Bewerken" />
             {{ form_end(edit_form) }}
-        
+        <!-- Don't separate these cells -->
             {{ form_start(delete_form) }}
                 <input class="button" type="submit" value="Verwijderen" />
             {{ form_end(delete_form) }}
