--- a/app/Resources/views/memberdate/show.html.twig
+++ b/app/Resources/views/memberdate/show.html.twig
@@ -41,11 +41,11 @@
         <table>
             <tr><td>
                 <a class="button" href="{{ path('lidBewerken_edit', { 'id': memberDate.id }) }}"
-                    style="float:right">Bewerken</a>
+                style="float:right">Bewerken</a>
             </td>
             <td>
                 {{ form_start(delete_form) }}
-                    <input class="button" type="submit" value="Verwijderen" style="float:left">
+                    <input class="button" type="submit" value="Verwijderen" />
                 {{ form_end(delete_form) }}
             </td></tr>
         </table>
