adapt routing user form

--- a/app/Resources/views/base.html.twig
+++ b/app/Resources/views/base.html.twig
@@ -26,8 +26,8 @@
             <tr>
                 <td class="nav"><a href="#">Home</a></td>        
                 <td class="nav"><a href="{{ path('login') }}">Inloggen</a></td>
-                <td class="nav"><a href="{{ path('register') }}">
-                Register <i class="fas fa-user-alt"></i></a></td>
+                <td class="nav"><a href="{{ path('register_index') }}">
+                Registeren <i class="fas fa-user-alt"></i></a></td>
             </tr>
         </table>
     </nav>
