--- a/app/Resources/views/users/edit.html.twig
+++ b/app/Resources/views/users/edit.html.twig
@@ -3,6 +3,8 @@
 {% block body %}
     <h1>User edit</h1>
 
+ <a href="{{ path('register_index') }}">Terug naar overzicht</a>
+ 
     {{ form_start(edit_form) }}
         {{ form_widget(edit_form) }}
         <input type="submit" value="Edit" />
@@ -10,7 +12,7 @@
 
     <ul>
         <li>
-            <a href="{{ path('register_index') }}">Back to the list</a>
+           
         </li>
         <li>
             {{ form_start(delete_form) }}
